--------------------------
Darshan Release Change Log
--------------------------

darshan-1.1.14
==============
* fixed erroneous incompatibility warning when opening old logs in darshan-parser

darshan-1.1.13
==============
* updated compiler scripts to fix link order in some cases with -lhdf5

darshan-1.1.12
==============
* improved mapping of file records to mount points
* new page in darshan-job-summary.pl output showing timelines of file access
* bug fix to "fast" mpif90 script
* checkpoint/restart ability in parallel fsstats script

darshan-1.1.11
==============
* Bug fix for lseek, pread, and pwrite when used in 32 applications without large file support
* Improved experimental darshan-gen-cc.pl script
* Added new experimental darshan-gen-cxx.pl script

darshan-1.1.10
==============
* Bug fix for files that are accessed with stat() but never opened
* Workaround zlib problems with 64 bit offsets on 32 bit architectures

darshan-1.1.9
=============
* Added "fast" version of each BG/P compiler
* Added experimental scripts in test directory to run fsstats in parallel
* Kevin Harms: Added experimental utilities for loading darshan results into SQL
* Use exclusive flag when opening output file (to protect against file name collision)
* Rob Ross: updates to allow command line tools to build on Darwin
* Bug fix for pnetcdf configure problem reported by Rob Latham; darshan now always pulls in MPI_Wtime() symbol at link time

darshan-1.1.8
=============
* Added tracking of file system type and mount point for each file
* Added tracking of file size at open time (CP_SIZE_AT_OPEN)
* Moved sync cost to be counted in cumulative write time rather than cumulative metadata time
* Added sync as a separate category in darshan-job-summar.pl counters
* Bug fix to most frequent access size table in darshan-job-summary.pl
* Converted all utilities to use darshan-logutils api for reading output files
* Added backwards compatibility to darshan-logutils routines