@@ -2,6 +2,14 @@
 Darshan Release Change Log
 --------------------------
 
+darshan-2.0.0-pre1
+==================
+* introduce new output file format that is portable across architectures, with
+reader-makes-right byte swapping
+* enable darshan-job-summary.pl to open output files directly without using
+intermediate darshan-parser output
+* backwards compatibility to version 1.1.0
+
 darshan-1.1.14
 ==============
 * fixed erroneous incompatibility warning when opening old logs in darshan-parser
